--- a/utils/bff_browser/templates/help.html
+++ b/utils/bff_browser/templates/help.html
@@ -24,7 +24,7 @@
 
   <div class="container">
     <h1 class="mb-4">Help &amp; Documentation</h1>
-    <p>Welcome to the BFF Dashboard Help page. Here, you can find information on how to use the different features of the application.</p>
+    <p>Welcome to the BFF Browser Help page. Here, you can find information on how to use the different features of the application.</p>
     
     <h3>Navigation</h3>
     <p>The navigation bar at the top of each page allows you to move between the Home page, Help page, and other sections. Use the menu to quickly access the Genomic Variations and Individuals sections, or return to Home.</p>
@@ -48,10 +48,8 @@
     </p>
     
     <h3>Security</h3>
-    <p>
-      <h3>Security</h3>
-<p>
-  For security reasons, file paths are validated to ensure safe and correct access. The application verifies that the provided path points to a valid file before processing it. While the system is designed to allow access from various directories, please ensure that the file paths you provide are accurate and that the files exist. This precaution helps protect the application from errors and unauthorized access.
+     <p>
+     For security reasons, file paths are validated to ensure safe and correct access. The application verifies that the provided path points to a valid file before processing it. While the system is designed to allow access from various directories, please ensure that the file paths you provide are accurate and that the files exist. This precaution helps protect the application from errors and unauthorized access.
     </p>
   </div>
 
