--- a/utils/bff_browser/templates/path_input.html
+++ b/utils/bff_browser/templates/path_input.html
@@ -11,7 +11,7 @@
     <h1>View HTML File</h1>
     <form method="POST" action="{{ url_for('view_by_path') }}">
       <div class="form-group">
-        <label for="filepath">Full URL or Server Path:</label>
+        <label for="filepath">Full Path to the HTML file:</label>
         <input type="text" class="form-control" id="filepath" name="filepath" required size="100">
       </div>
       <button type="submit" class="btn btn-primary">View File</button>
