--- a/utils/bff_browser/templates/home.html
+++ b/utils/bff_browser/templates/home.html
@@ -72,7 +72,7 @@
           <div class="card-body">
             <h5 class="card-title">Combined BFF Example</h5>
             <p class="card-text">Load two JSON files (genomicVariations + individuals) by path and see them combined.</p>
-            <a href="{{ url_for('combined_example') }}" class="btn btn-primary mb-2">Launch Combined Example</a>
+            <a href="{{ url_for('combined_example') }}" class="btn btn-primary mb-2">See Combined Example</a>
             <br>
             <a href="{{ url_for('combined_view_by_path') }}" class="btn btn-secondary">Go to Combined View by Path</a>
           </div>
