--- a/utils/bff_browser/templates/combined_path_input.html
+++ b/utils/bff_browser/templates/combined_path_input.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Combined BFF: View by Path</title>
-  <!-- Add your Bootstrap links, etc. -->
+   <!-- Include Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <!-- Include DataTables CSS -->
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"/>
 </head>
 <body>
   <div class="container mt-4">
