--- a/utils/bff_browser/templates/combined_bff.html
+++ b/utils/bff_browser/templates/combined_bff.html
@@ -26,7 +26,7 @@
     <table id="combinedTable" class="table table-striped table-bordered">
       <thead>
         <tr>
-          <th>BioSample ID</th>
+          <th>Individual ID</th>
           <th>Individual Info</th>
           <th>Variants (Hidden by Default)</th>
         </tr>
