--- a/utils/bff_browser/templates/home.html
+++ b/utils/bff_browser/templates/home.html
@@ -44,7 +44,7 @@
       <div class="col-md-4 section-card">
         <div class="card h-100">
           <div class="card-body">
-            <h5 class="card-title">Genomic Variations BFF Browser</h5>
+            <h5 class="card-title">Genomic Variations</h5>
             <p class="card-text">Access examples (chr22 CINECA_synthetic_cohort_EUROPE_UK1) and upload your HTML for genomic variations.</p>
             <a href="{{ url_for('example') }}" class="btn btn-primary mb-2">See Example Job</a>
             <br>
@@ -57,7 +57,7 @@
       <div class="col-md-4 section-card">
         <div class="card h-100">
           <div class="card-body">
-            <h5 class="card-title">Individuals BFF Browser</h5>
+            <h5 class="card-title">Individuals</h5>
             <p class="card-text">Access examples (CINECA_synthetic_cohort_EUROPE_UK1) and upload your HTML for individuals data.</p>
             <a href="{{ url_for('individuals_example') }}" class="btn btn-primary mb-2">See Individuals Example</a>
             <br>
