--- a/utils/bff_browser/templates/combined_path_input.html
+++ b/utils/bff_browser/templates/combined_path_input.html
@@ -1,28 +1,24 @@
-<!-- templates/combined_path_input.html -->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Combined BFF: View by Path</title>
-   <!-- Include Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-  <!-- Include DataTables CSS -->
-  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"/>
-</head>
-<body>
-  <div class="container mt-4">
-    <h1>Combined BFF (View by Path)</h1>
-    <form method="POST">
-      <div class="form-group">
-        <label for="genomicPath">Path to Genomic JSON</label>
-        <input type="text" class="form-control" name="genomicPath" id="genomicPath" placeholder="./static/jobs/some_genomic_variations.json">
-      </div>
-      <div class="form-group">
-        <label for="individualsPath">Path to Individuals JSON</label>
-        <input type="text" class="form-control" name="individualsPath" id="individualsPath" placeholder="./static/jobs/cineca_uk1_individuals/individuals.json">
-      </div>
-      <button type="submit" class="btn btn-primary">Load & Merge</button>
-    </form>
-  </div>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}Combined BFF: View by Path{% endblock %}
+
+{% block extra_css %}
+<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.21/css/dataTables.bootstrap4.min.css"/>
+{% endblock %}
+
+{% block content %}
+<div class="container mt-4">
+  <h1>Combined BFF (View by Path)</h1>
+  <form method="POST">
+    <div class="form-group">
+      <label for="genomicPath">Path to Genomic JSON</label>
+      <input type="text" class="form-control" name="genomicPath" id="genomicPath" placeholder="./static/jobs/some_genomic_variations.json">
+    </div>
+    <div class="form-group">
+      <label for="individualsPath">Path to Individuals JSON</label>
+      <input type="text" class="form-control" name="individualsPath" id="individualsPath" placeholder="./static/jobs/cineca_uk1_individuals/individuals.json">
+    </div>
+    <button type="submit" class="btn btn-primary">Load & Merge</button>
+  </form>
+</div>
+{% endblock %}
